syntax = "proto3";

package user;


service AuthService {
  rpc Login (LoginParams) returns (TokenRes) {}
  rpc Verify (TokenRes) returns (UserRes) {}
  rpc Signup (SignupParams) returns (UserRes) {}
}
message SignupParams {
  string username = 1;
  string password = 2;
}

message LoginParams {
  string username = 1;
  string password = 2;
  string roleName = 3;
}

message UserRes {
 string username = 1;
 string id = 2;
 string roleName = 3;
}

message TokenRes {
  string data = 1;
}